--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am learning to become a software developer. I am enthusiastic and optimistic. </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Australia </p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>i like to play guitar and sing</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>software developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Adelaide</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to work as a web developer and help others with their business</p>
     </section>
 
     <footer id="footer">
